@@ -76,6 +76,7 @@ static GOptionEntry  option_entries[] =
 /* information about known JPEG quantization tables */
 typedef struct
 {
+  /* const guint  hash; */        /* hash of luminance/chrominance tables */
   const gint   lum_sum;           /* sum of luminance table divisors */
   const gint   chrom_sum;         /* sum of chrominance table divisors */
   const gint   subsmp_h;          /* horizontal subsampling (1st component) */
@@ -216,16 +217,15 @@ static const QuantInfo quant_info[] =
 
   /* FIXME: the following entries are incomplete and need to be verified */
 
-  {   319,   665, 2, 1,  2, "ACD ?", "?", -94 },
-  {   436,   996, 2, 1,  2, "ACD ?", "?", -92 },
-  {   664,  1499, 2, 1,  2, "ACD ?", "?", -88 },
-  {  1590,  3556, 2, 2,  2, "ACD ?", "?", -71 },
-  {   284,   443, 2, 2,  2, "Adobe Photoshop CS3", "?", -96 },
+  {   319,   665, 2, 1, -2, "ACD ?", "?", -94 },
+  {   436,   996, 2, 1, -2, "ACD ?", "?", -92 },
+  {   664,  1499, 2, 1, -2, "ACD ?", "?", -88 },
+  {  1590,  3556, 2, 2, -2, "ACD ?", "?", -71 },
   {   109,   171, 1, 1,  2, "Adobe Photoshop CS or CS2", "quality 12", -98 },
-  {   303,   466, 1, 1,  2, "Adobe Photoshop CS2", "quality 11", -95 },
-  {   535,   750, 1, 1,  2, "Adobe Photoshop 7.0 or CS2", "quality 10", -93 },
-  {   668,   830, 1, 1,  2, "Adobe Photoshop CS2", "quality 9", -91 },
-  {   794,   895, 1, 1,  2, "Adobe Photoshop CS2", "quality 8", -90 },
+  {   303,   466, 1, 1,  2, "Adobe Photoshop CS or CS2, Camera Raw 3", "quality 11", -95 },
+  {   535,   750, 1, 1,  2, "Adobe Photoshop 7.0 (or CS2)", "quality 10", -93 },
+  {   668,   830, 1, 1,  2, "Adobe Photoshop 7.0, CS, CS2", "quality 9", -91 },
+  {   794,   895, 1, 1,  2, "Adobe Photoshop 7.0, CS, CS2", "quality 8", -90 },
   {   971,   950, 1, 1,  2, "Adobe Photoshop CS2", "quality 7", -89 },
   {   884,   831, 2, 2,  2, "Adobe Photoshop CS2", "quality 6", -90 },
   {  1032,   889, 2, 2,  2, "Adobe Photoshop CS2", "quality 5", -89 },
@@ -233,7 +233,7 @@ static const QuantInfo quant_info[] =
   {  1216,   977, 2, 2,  2, "Adobe Photoshop CS2", "quality 3", -88 },
   {  1281,   998, 2, 2,  2, "Adobe Photoshop CS2", "quality 2", -87 },
   {  1484,  1083, 2, 2,  2, "Adobe Photoshop CS2", "quality 1", -86 },
-  {  1582,  1108, 2, 2,  2, "Adobe Photoshop CS2", "quality 0", -85 },
+  {  1582,  1108, 2, 2,  2, "Adobe Photoshop 7.0, CS, CS2", "quality 0", -85 },
   {    95,   168, 1, 1,  2, "Adobe Photoshop CS2", "save for web 100", -98 },
   {   234,   445, 1, 1,  2, "Adobe Photoshop CS2", "save for web 90", -96 },
   {   406,   724, 1, 1,  2, "Adobe Photoshop CS2", "save for web 80", -93 },
@@ -244,54 +244,48 @@ static const QuantInfo quant_info[] =
   {  2223,  2464, 2, 2,  2, "Adobe Photoshop CS2", "save for web 30", -74 },
   {  2575,  2903, 2, 2,  2, "Adobe Photoshop CS2", "save for web 20", -70 },
   {  3514,  3738, 2, 2,  2, "Adobe Photoshop CS2", "save for web 10", -60 },
-  {    95,   166, 1, 1,  2, "Adobe Photoshop CS or Lightroom", "save for web 100?", -98 },
-  {   232,   443, 1, 1,  2, "Adobe Photoshop CS", "?", -96 },
-  {   649,   853, 1, 1,  2, "Adobe Photoshop CS or Elements 4.0", "quality 8", -91 },
-  {   844,   849, 2, 2,  2, "Adobe Photoshop CS", "?", -90 },
+  {    95,   166, 1, 1,  2, "Adobe Photoshop 7.0, CS, CS2 or Lightroom", "quality 12", -98 },
+  {   232,   443, 1, 1,  2, "Adobe Photoshop CS", "quality 11", -96 },
+  {   649,   853, 1, 1,  2, "Adobe Photoshop 7.0, CS, CS2, Elements 4.0", "quality 8", -91 },
+  {   844,   849, 2, 2,  2, "Adobe Photoshop CS", "quality 5", -90 },
   {   962,   892, 2, 2,  2, "Adobe Photoshop CS", "?", -89 },
   {   406,   722, 1, 1,  2, "Adobe Photoshop 7.0", "quality 10", -93 },
-  {   539,   801, 1, 1,  2, "Adobe Photoshop 7.0 CE", "quality 9", -92 },
-  {   786,   926, 1, 1,  2, "Adobe Photoshop 7.0", "?", -90 },
-  {   539,   801, 1, 1,  2, "Adobe Photoshop 5.0", "?", -92 },
+  {   539,   801, 1, 1,  2, "Adobe Photoshop 5.0, 7.0", "quality 9", -92 },
+  {   786,   926, 1, 1,  2, "Adobe Photoshop 7.0, CS2", "quality 7", -90 },
   {   717,   782, 2, 2,  2, "Adobe Photoshop 5.0", "?", -91 },
   {  1068,   941, 2, 2,  2, "Adobe Photoshop 4.0", "?", -89 },
-  {   339,   670, 1, 1,  2, "Adobe Photoshop ?", "85%", -94 },
+  {   339,   670, 1, 1,  2, "Adobe Photoshop ?", "save for web 85", -94 },
   {   406,   722, 1, 1,  2, "Adobe Photoshop 6.0", "quality 10", -93 },
   {   427,   613, 2, 2,  2, "Adobe Photoshop ?", "?", -94 },
-  {   525,   941, 1, 1,  2, "Adobe Photoshop ?", "75%", -92 },
-  {   803,  1428, 1, 1,  2, "Adobe Photoshop ?", "65%", -87 },
-  {  1085,  1996, 1, 1,  2, "Adobe Photoshop ?", "55%", -83 },
-  {  1156,  2116, 1, 1,  2, "Adobe Photoshop ?", "52%", -82 },
-  {  1175,  2169, 1, 1,  2, "Adobe Photoshop ?", "51%", -81 },
-  {  2272,  2522, 2, 2,  2, "Adobe Photoshop ?", "29%", -73 },
-  {  4028,  4174, 2, 2,  2, "Adobe Photoshop ?", "3%", -55 },
+  {   525,   941, 1, 1,  2, "Adobe Photoshop ?", "save for web 75", -92 },
+  {   803,  1428, 1, 1,  2, "Adobe Photoshop ?", "save for web 65", -87 },
+  {  1085,  1996, 1, 1,  2, "Adobe Photoshop ?", "save for web 55", -83 },
+  {  1156,  2116, 1, 1,  2, "Adobe Photoshop ?", "save for web 52", -82 },
+  {  1175,  2169, 1, 1,  2, "Adobe Photoshop ?", "save for web 51", -81 },
+  {  2272,  2522, 2, 2,  2, "Adobe Photoshop ?", "save for web 29", -73 },
+  {  4028,  4174, 2, 2,  2, "Adobe Photoshop ?", "save for web 3", -55 },
   {   513,     0, 1, 1,  1, "Adobe Photoshop ?", "?", -93 },
-  {  2515,  2831, 2, 2,  2, "Adobe ImageReady", "22%", -70 },
-  {  3822,  3975, 2, 2,  2, "Adobe ImageReady", "6%", -57 },
-  {   255,   393, 2, 1,  2, "Apple Quicktime 7.1", "?", -96 },
+  {  2515,  2831, 2, 2,  2, "Adobe ImageReady", "save for web 22", -70 },
+  {  3822,  3975, 2, 2,  2, "Adobe ImageReady", "save for web 6", -57 },
+  {   255,   393, 2, 1,  2, "Apple Quicktime 7.1 or 7.2", "?", -96 },
   {   513,   775, 2, 2,  2, "Apple Quicktime 7.2", "?", -93 },
-  {   543,   784, 2, 1,  2, "Apple Quicktime 7.1", "?", -92 },
+  {   543,   784, 2, 1, -2, "Apple Quicktime 7.1", "?", -92 },
   {   361,   506, 2, 1,  2, "Apple ?", "?", -95 },
   {  1511,  2229, 2, 2,  2, "Apple ?", "?", -79 },
-  {   188,   276, 2, 1,  2, "Canon EOS 300D, 350D or 400D", "Fine", -97 },
-  {   708,  1057, 2, 1,  2, "Canon EOS 10D", "?", -90 },
-  {   533,  1925, 2, 1,  2, "Canon Digital Ixus", "Fine", -86 },
-  {   533,  1325, 2, 1,  2, "Canon PowerShot A95, S1, S2, SD400 or SD630", "Fine", -89 },
-  {   192,   556, 1, 2,  2, "Canon PowerShot A430", "Superfine", -95 },
-  {   533,  1325, 2, 2,  2, "Canon PowerShot A430", "Superfine", -89 },
-  {   192,   556, 2, 1,  2, "Canon PowerShot S5 IS, S200 or Ixus 800", "Superfine", -95 },
-  {   533,  1325, 1, 2,  2, "Canon Digital Ixus 400", "Fine", -89 },
-  {    64,    64, 2, 2,  2, "Casio EX-Z600", "Fine", 100 },
-  {   288,   443, 2, 1,  3, "FujiFilm MX-2700", "?", -96 },
-  {   389,   560, 2, 1,  3, "FujiFilm FinePix S700", "Fine", -94 },
-  {   515,   774, 2, 1,  3, "FujiFilm FinePix 2600 Zoom", "Fine", -93 },
-  {  1254,  1888, 2, 1,  3, "FujiFilm MX-1700 Zoom", "?", -82 },
-  {  2056,  3102, 2, 1,  3, "FujiFilm DX-10", "?", -71 },
-  {   167,   240, 2, 2,  3, "HP PhotoSmart C850, C935", "?", -97 },
-  {  1970,  1970, 2, 2,  3, "HP PhotoSmart C812", "?", -78 },
-  {   566,   583, 2, 2,  2, "Kodak V610", "?", -93 },
-  {   736,  1110, 2, 2,  2, "Kodak DC240", "?", 90 },
-  {  1375,  1131, 2, 2,  2, "Kodak DC210", "?", -86 },
+  {   188,   276, 2, 1, -2, "Canon EOS 300D, 350D or 400D", "Fine", -97 },
+  {   708,  1057, 2, 1, -2, "Canon EOS 10D", "Normal", -90 },
+  {   533,  1325, 2, 1, -2, "Canon PowerShot A95, S1, S2, SD400 or SD630", "Fine", -89 },
+  {   192,   556, 2, 1, -2, "Canon PowerShot S5 IS, A300, A430, S200, SD500, SD700, Ixus 700 or 800", "Superfine", -95 },
+  {   533,  1325, 1, 2, -2, "Canon Digital Ixus 400", "Fine", -89 },
+  {   288,   443, 2, 1, -3, "FujiFilm MX-2700", "?", -96 },
+  {   389,   560, 2, 1, -3, "FujiFilm FinePix S700", "Fine", -94 },
+  {   515,   774, 2, 1, -3, "FujiFilm FinePix 2600 Zoom", "Fine", -93 },
+  {   167,   240, 2, 2, -3, "HP PhotoSmart C850, C935", "?", -97 },
+  {   167,   240, 2, 2, -3, "HP PhotoSmart C850, C935", "?", -97 },
+  {  1970,  1970, 2, 2, -3, "HP PhotoSmart C812", "?", -78 },
+  {   369,   558, 2, 1, -3, "Kodak P880", "?", 95 },
+  {   566,   583, 2, 2, -2, "Kodak V610", "Fine", -93 },
+  {   736,  1110, 2, 2, -2, "Kodak DC240", "?", 90 },
   {   736,  1110, 1, 1, -2, "Kodak Imaging", "High (high res.)", 90 },
   {   736,  1110, 2, 1, -2, "Kodak Imaging", "High (medium res.)", 90 },
   {   736,  1110, 4, 1, -2, "Kodak Imaging", "High (low res.)", 90 },
@@ -304,96 +298,92 @@ static const QuantInfo quant_info[] =
   {  9056, 13790, 2, 1, -2, "Kodak Imaging", "Low (medium res.)", 20 },
   {  9056, 13790, 4, 1, -2, "Kodak Imaging", "Low (low res.)", 20 },
   {  9056,     0, 1, 1,  1, "Kodak Imaging", "Low (grayscale)", 20 },
-  {   161,   179, 1, 1,  2, "Lead ?", "?", -98 },
-  {   711,  1055, 1, 1,  2, "Lead ?", "?", -90 },
-  {  1079,  1610, 1, 1,  2, "Lead ?", "?", -85 },
-  {  2031,  3054, 1, 1,  2, "Lead ?", "?", -72 },
-  {  4835,  7226, 1, 1,  2, "Lead ?", "?", -37 },
-  {  8199, 12287, 1, 1,  2, "Lead ?", "?", -22 },
-  {    96,   117, 2, 1,  2, "Leica Digilux 3", "?", -98 },
-  {   221,   333, 2, 1,  2, "Leica M8", "?", 97 },
-  {   582,   836, 2, 1,  2, "Medion ?", "?", -92 },
+  {   161,   179, 1, 1, -2, "Lead ?", "?", -98 },
+  {   711,  1055, 1, 1, -2, "Lead ?", "?", -90 },
+  {  1079,  1610, 1, 1, -2, "Lead ?", "?", -85 },
+  {  2031,  3054, 1, 1, -2, "Lead ?", "?", -72 },
+  {  4835,  7226, 1, 1, -2, "Lead ?", "?", -37 },
+  {  8199, 12287, 1, 1, -2, "Lead ?", "?", -22 },
+  {    96,   117, 2, 1, -2, "Leica Digilux 3", "?", -98 },
+  {   221,   333, 2, 1, -2, "Leica M8", "?", 97 },
+  {   582,   836, 2, 1, -2, "Medion ?", "?", -92 },
+  {   433,   667, 2, 1, -2, "Medion ?", "?", -94 },
   {  1858,  2780, 2, 2,  2, "Microsoft Office", "Default", 75 },
-  {   116,   169, 2, 1,  2, "Nikon D50, D70, D70s, D80", "Fine", -98 },
-  {   218,   333, 2, 1,  2, "Nikon D70 or D70s", "Normal", -97 },
-  {   616,   941, 2, 1,  2, "Nikon D70 or D70s", "Basic", -91 },
-  {   671,   999, 2, 1,  2, "Nikon D70 or D70s", "Basic + raw", -90 },
-  {   127,   169, 2, 1,  2, "Nikon D70 v1.0", "Fine", -98 },
-  {   302,   444, 2, 1,  2, "Nikon D70 v1.0", "Fine", -95 },
-  {   315,   499, 2, 1,  2, "Nikon D70 v1.0", "Fine", -95 },
-  {   329,   500, 2, 1,  2, "Nikon D70 v1.0", "Fine", -95 },
-  {   346,   500, 2, 1,  2, "Nikon D70 v1.0", "Fine", -95 },
-  {   372,   558, 2, 1,  2, "Nikon D70 v1.0", "Fine", -94 },
-  {   389,   560, 2, 1,  2, "Nikon D70 v1.0", "Fine", -94 },
-  {   419,   611, 2, 1,  2, "Nikon D70 v1.0", "Fine", -94 },
-  {   449,   668, 2, 1,  2, "Nikon D70 v1.0", "Fine", -93 },
-  {   506,   775, 2, 1,  2, "Nikon D70 v1.0", "Fine", -93 },
-  {   529,   781, 2, 1,  2, "Nikon D70 v1.0", "Fine", -92 },
-  {   261,   389, 2, 1,  2, "Nikon D50", "Normal", -96 },
-  {   345,   499, 2, 1,  2, "Nikon D50", "Normal", -95 },
-  {   547,   825, 1, 1,  2, "Nikon D50", "Fine", -92 },
-  {   963,  1442, 1, 2,  2, "Nikon D50", "?", 87 },
-  {   855,  1279, 2, 1,  2, "Nikon D40", "?", -88 },
-  {   667,   999, 2, 1,  3, "Nikon E4300", "Normal", 91 },
-  {   736,  1110, 2, 1,  3, "Nikon E4300", "Normal", 90 },
-  {   884,  1332, 2, 1,  3, "Nikon E4300", "Normal", 88 },
-  {    64,    64, 1, 1,  2, "Nikon Browser 6", "High quality", 100 },
-  {   779,  1164, 1, 1,  2, "Nikon Browser 6", "Standard quality", -89 },
-  {  1697,  2554, 2, 1,  2, "Nikon Browser 6", "Standard eq", -76 },
-  {  2746,  5112, 2, 2,  2, "Nikon Browser 6", "Standard compression", -57 },
-  {  8024, 12006, 2, 2,  2, "Nikon Browser 6", "Maximum compression", -22 },
-  {   736,  1110, 2, 2,  2, "Olympus Camedia Master", "High quality?", 90 },
-  {  1057,  1561, 2, 1,  2, "Olympus u770SW,S770SW", "?", -85 },
-  {   275,   395, 2, 1,  2, "Olympus u750,S750", "Raw?", -96 },
-  {  1477,  2221, 2, 2,  2, "Olympus u710,S710", "Super high quality?", 80 },
-  {   259,   393, 2, 2,  2, "Olympus u30D,S410D,u410D?", "High quality?", -96 },
-  {   437,   617, 2, 1,  2, "Olympus u30D,S410D,u410D", "High quality", -94 },
-  {   447,   670, 2, 1,  2, "Olympus u30D,S410D,u410D", "High quality", -93 },
-  {   814,  1223, 2, 1,  3, "Olympus C960Z,D460Z", "Standard quality", 89 },
-  {   884,  1332, 2, 1,  3, "Olympus C211Z", "Standard quality", 88 },
-  {  1552,  2336, 2, 1,  3, "Olympus C990Z,D490Z", "High quality", 79 },
-  {   261,   392, 2, 1,  2, "Panasonic DMC-FZ5", "High", -96 },
-  {   251,   392, 2, 1,  2, "Panasonic DMC-FZ30", "High", -96 },
-  {   280,   445, 2, 1,  2, "Panasonic DMC-FZ30", "High", -96 },
-  {   304,   448, 2, 1,  2, "Panasonic DMC-FZ30", "High", -95 },
-  {   316,   499, 2, 1,  2, "Panasonic DMC-FZ30", "High", -95 },
-  {   332,   550, 2, 1,  2, "Panasonic DMC-FZ30", "High", -95 },
-  {   355,   555, 2, 1,  2, "Panasonic DMC-FZ30", "High", -95 },
-  {   375,   606, 2, 1,  2, "Panasonic DMC-FZ30", "High", -94 },
-  {   400,   615, 2, 1,  2, "Panasonic DMC-FZ30", "High", -94 },
-  {   420,   667, 2, 1,  2, "Panasonic DMC-FZ30", "High", -94 },
-  {   501,   775, 2, 1,  2, "Panasonic DMC-FZ30", "High", -93 },
-  {   577,   891, 2, 1,  2, "Panasonic DMC-FZ30", "High", -92 },
+  {   116,   169, 2, 1, -2, "Nikon D50, D70, D70s, D80", "Fine", -98 },
+  {   218,   333, 2, 1, -2, "Nikon D70 or D70s", "Normal", -97 },
+  {   616,   941, 2, 1, -2, "Nikon D70 or D70s", "Basic", -91 },
+  {   671,   999, 2, 1, -2, "Nikon D70 or D70s", "Basic + raw", -90 },
+  {   127,   169, 2, 1, -2, "Nikon D70 v1.0", "Fine", -98 },
+  {   302,   444, 2, 1, -2, "Nikon D70 v1.0", "Fine", -95 },
+  {   315,   499, 2, 1, -2, "Nikon D70 v1.0", "Fine", -95 },
+  {   329,   500, 2, 1, -2, "Nikon D70 v1.0", "Fine", -95 },
+  {   346,   500, 2, 1, -2, "Nikon D70 v1.0", "Fine", -95 },
+  {   372,   558, 2, 1, -2, "Nikon D70 v1.0", "Fine", -94 },
+  {   389,   560, 2, 1, -2, "Nikon D70 v1.0", "Fine", -94 },
+  {   419,   611, 2, 1, -2, "Nikon D70 v1.0", "Fine", -94 },
+  {   449,   668, 2, 1, -2, "Nikon D70 v1.0", "Fine", -93 },
+  {   506,   775, 2, 1, -2, "Nikon D70 v1.0", "Fine", -93 },
+  {   529,   781, 2, 1, -2, "Nikon D70 v1.0", "Fine", -92 },
+  {   261,   389, 2, 1, -2, "Nikon D50", "Normal", -96 },
+  {   345,   499, 2, 1, -2, "Nikon D50", "Normal", -95 },
+  {   855,  1279, 2, 1, -2, "Nikon D40", "?", -88 },
+  {   667,   999, 2, 1, -3, "Nikon E4300", "Normal", 91 },
+  {   736,  1110, 2, 1, -3, "Nikon E4300", "Normal", 90 },
+  {   884,  1332, 2, 1, -3, "Nikon E4300", "Normal", 88 },
+  {    64,    64, 1, 1, -2, "Nikon Browser 6", "High quality", 100 },
+  {   779,  1164, 1, 1, -2, "Nikon Browser 6 or PictureProject 1.6", "Standard quality", -89 },
+  {  1697,  2554, 2, 1, -2, "Nikon Browser 6", "Standard eq", -76 },
+  {  2746,  5112, 2, 2, -2, "Nikon Browser 6", "Standard compression", -57 },
+  {  8024, 12006, 2, 2, -2, "Nikon Browser 6", "Maximum compression", -22 },
+  {   736,  1110, 2, 2, -2, "Olympus Camedia Master", "High quality?", 90 },
+  {  1477,  2221, 2, 2, -2, "Olympus u710,S710", "Super high quality?", 80 },
+  {   437,   617, 2, 1, -2, "Olympus u30D,S410D,u410D", "High quality", -94 },
+  {   447,   670, 2, 1, -2, "Olympus u30D,S410D,u410D", "High quality", -93 },
+  {   447,   670, 2, 1, -2, "Olympus u30D,S410D,u410D", "High quality", -93 },
+  {   814,  1223, 2, 1, -3, "Olympus C960Z,D460Z", "Standard quality", 89 },
+  {   884,  1332, 2, 1, -3, "Olympus C211Z", "Standard quality", 88 },
+  {  1552,  2336, 2, 1, -3, "Olympus C990Z,D490Z", "High quality", 79 },
+  {   261,   392, 2, 1, -2, "Panasonic DMC-FZ5", "High", -96 },
+  {   251,   392, 2, 1, -2, "Panasonic DMC-FZ30", "High", -96 },
+  {   280,   445, 2, 1, -2, "Panasonic DMC-FZ30", "High", -96 },
+  {   304,   448, 2, 1, -2, "Panasonic DMC-FZ30", "High", -95 },
+  {   316,   499, 2, 1, -2, "Panasonic DMC-FZ30", "High", -95 },
+  {   332,   550, 2, 1, -2, "Panasonic DMC-FZ30", "High", -95 },
+  {   355,   555, 2, 1, -2, "Panasonic DMC-FZ30", "High", -95 },
+  {   375,   606, 2, 1, -2, "Panasonic DMC-FZ30", "High", -94 },
+  {   400,   615, 2, 1, -2, "Panasonic DMC-FZ30", "High", -94 },
+  {   420,   667, 2, 1, -2, "Panasonic DMC-FZ30", "High", -94 },
+  {   501,   775, 2, 1, -2, "Panasonic DMC-FZ30", "High", -93 },
+  {   577,   891, 2, 1, -2, "Panasonic DMC-FZ30", "High", -92 },
   {   324,   499, 2, 1,  2, "Ricoh Caplio R1V", "?", -95 },
   {   274,   443, 2, 1,  2, "Roxio PhotoSuite", "?", -96 },
-  {   634,   943, 2, 1,  2, "Samsung Digimax V3", "?", -91 },
-  {  1313,  1997, 2, 1,  2, "Samsung Digimax V3", "?", -82 },
-  {   218,   331, 2, 1,  2, "Samsung Digimax S600", "?", -97 },
-  {  1075,  1612, 2, 1,  3, "Sanyo SR6", "?", -85 },
-  {   785,  1168, 2, 1,  3, "Sanyo SX113", "?", -89 },
-  {   258,   389, 2, 1,  2, "Sony Cybershot", "?", -96 },
-  {  2782,  4259, 2, 1,  2, "Sony Cybershot", "?", -61 },
-  {    86,   115, 2, 1,  2, "Sony DSC-W55", "?", 99 },
-  {   122,   169, 2, 1,  2, "Sony DSC-F828, DSC-F88", "?", -98 },
-  {   221,   333, 2, 1,  2, "Sony DSC-W50, DSC-H2, DSC-H5", "?", 97 },
-  {   518,   779, 2, 1,  2, "Sony DSC-W70", "?", 93 },
-  {  1477,  2221, 2, 2,  2, "Sony DSC-W30, DSC-P43, DSC-S600", "?", 80 },
-  {   324,   682, 2, 1,  2, "Sony DSLR-A100", "?", -94 },
-  {   736,  1110, 2, 1,  2, "SonyEricsson K750i", "Fine", 90 },
-  {  1858,  2780, 2, 1,  2, "SonyEricsson K750i", "Normal", 75 },
-  {   836,  1094, 2, 2,  2, "SonyEricsson K750i", "Panorama fine", -89 },
-  {  1672,  2188, 2, 2,  2, "SonyEricsson K750i", "Panorama normal", -79 },
-  {   361,   555, 2, 1,  2, "SonyEricsson K750i", "?", -95 },
-  {   433,   667, 2, 1,  2, "SonyEricsson K750i", "?", -94 },
-  {   954,  1443, 2, 1,  2, "SonyEricsson K750i", "?", -87 },
-  {  1024,  1504, 2, 1,  2, "SonyEricsson K750i", "?", -86 },
-  {  1097,  1615, 2, 1,  2, "SonyEricsson K750i", "?", -85 },
-  {  1168,  1727, 2, 1,  2, "SonyEricsson K750i", "?", -84 },
-  {  1324,  2000, 2, 1,  2, "SonyEricsson K750i", "?", -82 },
-  {  1473,  2170, 2, 1,  2, "SonyEricsson K750i", "?", -80 },
-  {  1615,  2394, 2, 1,  2, "SonyEricsson K750i", "?", -78 },
-  {  1759,  2612, 2, 1,  2, "SonyEricsson K750i", "?", -76 },
-  {  1491,  1491, 2, 1,  2, "SonyEricsson Z600", "Default", -83 },
+  {   634,   943, 2, 1, -2, "Samsung Digimax V3", "?", -91 },
+  {  1313,  1997, 2, 1, -2, "Samsung Digimax V3", "?", -82 },
+  {   218,   331, 2, 1, -2, "Samsung Digimax S600", "?", -97 },
+  {   258,   389, 2, 1, -2, "Sony Cybershot", "?", -96 },
+  {    86,   115, 2, 1, -2, "Sony DSC-W55", "Fine", 99 },
+  {   122,   169, 2, 1, -2, "Sony DSC-F828, DSC-F88", "?", -98 },
+  {   221,   333, 2, 1, -2, "Sony DSC-W30, DSC-W50, DSC-H2, DSC-H5", "?", 97 },
+  {   518,   779, 2, 1, -2, "Sony DSC-W70", "?", 93 },
+  {  1477,  2221, 2, 2, -2, "Sony DSC-W30, DSC-P43, DSC-S600", "?", 80 },
+  {   324,   682, 2, 1, -2, "Sony DSLR-A100", "?", -94 },
+  {   736,  1110, 2, 1, -2, "SonyEricsson K750i", "Fine", 90 },
+  {  1858,  2780, 2, 1, -2, "SonyEricsson K750i or W200i", "Normal", 75 },
+  {   836,  1094, 2, 2, -2, "SonyEricsson K750i", "Panorama fine", -89 },
+  {  1672,  2188, 2, 2, -2, "SonyEricsson K750i", "Panorama normal", -79 },
+  {   361,   555, 2, 1, -2, "SonyEricsson K750i", "?", -95 },
+  {   433,   667, 2, 1, -2, "SonyEricsson K750i", "?", -94 },
+  {   954,  1443, 2, 1, -2, "SonyEricsson K750i", "?", -87 },
+  {  1024,  1504, 2, 1, -2, "SonyEricsson K750i", "?", -86 },
+  {  1097,  1615, 2, 1, -2, "SonyEricsson K750i", "?", -85 },
+  {  1168,  1727, 2, 1, -2, "SonyEricsson K750i", "?", -84 },
+  {  1324,  2000, 2, 1, -2, "SonyEricsson K750i", "?", -82 },
+  {  1473,  2170, 2, 1, -2, "SonyEricsson K750i", "?", -80 },
+  {  1615,  2394, 2, 1, -2, "SonyEricsson K750i", "?", -78 },
+  {  1759,  2612, 2, 1, -2, "SonyEricsson K750i", "?", -76 },
+  {  1491,  1491, 2, 1, -2, "SonyEricsson Z600", "Default", -83 },
+  {  2211,  3284, 2, 1, -2, "Trust 760 Powerc@m", "?", 70 },
+  {  2211,  3284, 1, 2, -2, "Trust 760 Powerc@m", "?", 70 },
   {  1830,  2725, 1, 1,  2, "Xing VT-Compress", "?", -75 }
 };
 
